force-app/main/default/objects/ICD_Codes__c/ICD_Codes__c.object-meta.xml
<CustomObject>
    <description>Diagnosis Code stores diagnosis code along with their ICDs.
Both template and patient related diagnosis are stored in this object differentiated by the record type.</description>
    <label>Diagnosis Code</label>
    <nameField>
        <label>Code Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnoses Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>