force-app/main/default/objects/ICD_Codes__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the diagnosis with the Patient.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Diagnosis Code</relationshipLabel>
    <relationshipName>Diagnosis_Code</relationshipName>
    <type>Lookup</type>
</CustomField>