force-app/main/default/objects/ICD_Codes__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the diagnosis code is available for use.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>