force-app/main/default/objects/ICD_Codes__c/fields/Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the diagnosis with the Care Episode.</description>
    <label>Care Episode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visits__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Diagnosis Code</relationshipLabel>
    <relationshipName>Diagnosis_Code</relationshipName>
    <type>Lookup</type>
</CustomField>