force-app/main/default/objects/ICD_Codes__c/fields/Code_Description1__c.field-meta.xml
<CustomField>
    <fullName>Code_Description1__c</fullName>
    <description>Detailed description of the diagnosis code.</description>
    <label>Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>