force-app/main/default/objects/ICD_Codes__c/fields/Diagnosed_By__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who diagnosed and their info – in case if decision making goes incorrect, the accountability comes to here.</description>
    <label>Diagnosed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Diagnosis Code</relationshipLabel>
    <relationshipName>Diagnosis_Code</relationshipName>
    <type>Lookup</type>
</CustomField>