force-app/main/default/objects/ICD_Codes__c/fields/Diagnosis_Attestation_on__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Attestation_on__c</fullName>
    <description>Attested by.</description>
    <label>Diagnosis Attestation on</label>
    <type>DateTime</type>
</CustomField>