force-app/main/default/objects/ICD_Codes__c/fields/Diagnosis_Code_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code_and_Name__c</fullName>
    <description>Formula to concatenate name and description.</description>
    <formula>Name + &apos; &apos; + &apos; - &apos; +  Code_Description1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagnosis Code and Name</label>
    <type>Text</type>
</CustomField>