force-app/main/default/objects/ICD_Codes__c/fields/Diagnosis_Type__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Type__c</fullName>
    <description>Type of diagnosis code represented in the record such as primary or secondary.</description>
    <label>Diagnosis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>