force-app/main/default/objects/ICD_Codes__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Represents the date from which this diagnosis code is effective.</description>
    <label>Date Diagnosed</label>
    <type>Date</type>
</CustomField>