force-app/main/default/objects/ICD_Codes__c/fields/Form_Value__c.field-meta.xml
<CustomField>
    <fullName>Form_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Value</label>
    <referenceTo>Form_Value__c</referenceTo>
    <relationshipLabel>Diagnosis Code</relationshipLabel>
    <relationshipName>Diagnosis_Code</relationshipName>
    <type>Lookup</type>
</CustomField>