force-app/main/default/objects/ICD_Codes__c/fields/ICD_Description__c.field-meta.xml
<CustomField>
    <fullName>ICD_Description__c</fullName>
    <description>Provides a detailed description based on the classification of Diseases coding system.</description>
    <label>ICD Description</label>
    <length>7000</length>
    <type>LongTextArea</type>
</CustomField>