force-app/main/default/objects/ICD_Codes__c/fields/Is_Patient_Specific__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the diagnosis is unique to the individual patient.</description>
    <label>Is Patient Specific</label>
    <type>Checkbox</type>
</CustomField>