force-app/main/default/objects/ICD_Codes__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <label>Long Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>