force-app/main/default/objects/ICD_Codes__c/fields/Related_Diagnosis_code__c.field-meta.xml
<CustomField>
    <fullName>Related_Diagnosis_code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the diagnosis with the UA sample details.</description>
    <label>Related Diagnosis code</label>
    <referenceTo>UA_Sample_Details__c</referenceTo>
    <relationshipLabel>Diagnosis Codes</relationshipLabel>
    <relationshipName>Diagnosis_Code</relationshipName>
    <type>Lookup</type>
</CustomField>