force-app/main/default/objects/ICD_Codes__c/fields/Template_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Template_Diagnosis_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a self lookup field and is used to associate the template record to the patient diagnosis record.</description>
    <label>Diagnosis Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ICD_Codes__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Template Diagnosis Code</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ICD_Codes__c</referenceTo>
    <relationshipLabel>Diagnosis Code</relationshipLabel>
    <relationshipName>Template_Diagnosis_Code</relationshipName>
    <type>Lookup</type>
</CustomField>