force-app/main/default/objects/ICD_Codes__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <description>Represents the date after which the diagnosis code is invalid</description>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>