force-app/main/default/objects/ICD_Codes__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>ICD version represents the version such as ICD-9 or ICD-10.</description>
    <label>ICD Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICD 10</fullName>
                <default>true</default>
                <label>ICD 10</label>
            </value>
            <value>
                <fullName>ICD 11</fullName>
            </value>
            <value>
                <fullName>ICD 9</fullName>
                <isActive>false</isActive>
                <label>ICD 9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>