force-app/main/default/objects/ICD_Codes__c/recordTypes/EHR_Form_Default.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Default</fullName>
    <active>false</active>
    <label>Default</label>
</RecordType>