force-app/main/default/objects/ICD_Codes__c/recordTypes/Non_Templatized.recordType-meta.xml
<RecordType>
    <fullName>Non_Templatized</fullName>
    <active>false</active>
    <label>Non-Templatized</label>
</RecordType>