force-app/main/default/objects/ICD_Codes__c/recordTypes/Patient_Diagnosis_Code.recordType-meta.xml
<RecordType>
    <fullName>Patient_Diagnosis_Code</fullName>
    <active>true</active>
    <label>Patient Diagnosis Code</label>
</RecordType>