force-app/main/default/objects/ICD_Codes__c/recordTypes/Template_Diagnosis_Code.recordType-meta.xml
<RecordType>
    <fullName>Template_Diagnosis_Code</fullName>
    <active>true</active>
    <label>Template Diagnosis Code</label>
</RecordType>