force-app/main/default/objects/ICD_Codes__c/listViews/Patient_Diagnosis_Code.listView-meta.xml
<ListView>
    <fullName>Patient_Diagnosis_Code</fullName>
    <columns>NAME</columns>
    <columns>Diagnosis_Code_and_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Version__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICD_Codes__c.Patient_Diagnosis_Code</value>
    </filters>
    <label>Patient Diagnosis Code</label>
</ListView>