force-app/main/default/objects/ICD_Codes__c/listViews/Template_Diagnosis_Codes.listView-meta.xml
<ListView>
    <fullName>Template_Diagnosis_Codes</fullName>
    <columns>NAME</columns>
    <columns>Diagnosis_Code_and_Name__c</columns>
    <columns>Code_Description1__c</columns>
    <columns>Active__c</columns>
    <columns>Version__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ICD_Codes__c.Template_Diagnosis_Code</value>
    </filters>
    <label>Template Diagnosis Codes</label>
</ListView>